--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 .DS_Store
 node_modules
 /dist
-.firebase
-.firebaserc
+
 
 # local env files
 .env.local
@@ -12,7 +11,7 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-firebase-debug.log*
+pnpm-debug.log*
 
 # Editor directories and files
 .idea
@@ -21,4 +20,4 @@ firebase-debug.log*
 *.ntvs*
 *.njsproj
 *.sln
-*.sw*
+*.sw?
