--- a/package.json
+++ b/package.json
@@ -1,44 +1,51 @@
 {
   "name": "inskuship",
-  "version": "1.2.0",
+  "version": "0.1.0",
   "private": true,
-  "description": "inskuship tool untuk kita semua",
-  "author": "ctrmirna@gmail.com && ilham && septianm.r@gmail.com",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "lodash.filter": "^4.6.0",
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0",
     "vuetify": "^1.2.3"
   },
   "devDependencies": {
-    "@babel/polyfill": "^7.0.0-beta.49",
-    "@leeboyin/sku-calculator": "^1.0.7",
-    "@vue/cli-plugin-babel": "^3.0.1",
+    "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "^3.0.1",
-    "@vue/eslint-config-airbnb": "^5.0.2",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
-    "easyinvoice": "^1.0.147",
     "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
     "jsbarcode": "^3.11.5",
-    "jspdf": "^2.4.0",
-    "jspdf-autotable": "^3.5.20",
-    "jspdf-invoice-template": "^1.3.2",
-    "sass": "^1.41.0",
+    "sass": "^1.43.3",
     "sass-loader": "^9.0.2",
-    "vue-barcode": "^1.3.0",
-    "vue-cli-plugin-vuetify": "^0.1.6",
-    "vue-pagination-2": "^3.0.91",
-    "vue-template-compiler": "^2.5.17",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.46.0",
-    "webpack-bundle-analyzer": "^2.13.1"
-  }
+    "webpack-bundle-analyzer": "^3.9.0"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
