--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsbarcode": "^3.11.5",
     "sass": "^1.43.3",
     "sass-loader": "^9.0.2",
+    "vue-barcode": "^1.3.0",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^3.9.0"
